Test case failures.